added angular cdn

--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,15 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+	<!-- angular -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
 	<title>MEAN</title>
 
 </head>
 <body>
 	<h1>Welcome Back Again</h1>
 
-
+	{{1+1}}
 
 
 	
