setted up SPA env with angular

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myApp">
 <head>
 	
 	<!-- Latest compiled and minified CSS -->
@@ -14,17 +14,21 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-	<!-- angular -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
 	<title>MEAN</title>
 
 </head>
-<body ng-app>
+<body>
 	<h1>Welcome Back Again</h1>
+	<!-- <div ng-controller="WeathersCtrl"></div> -->
 
-	{{1+1}}
+	<div ng-view></div>
 
 
+	<!-- angular -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
+	<script src="https://code.angularjs.org/1.5.8/angular-route.js"></script>
+	<script src="js/app.js"></script>
+	
 	
 
 </body>
