--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
 	<!-- <cw-footer-navbar></cw-footer-navbar> -->
 
 	<!-- angular -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
-	<script src="https://code.angularjs.org/1.5.8/angular-route.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+	<script src="https://code.angularjs.org/1.5.8/angular-route.min.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/controllers/dashboard.js"></script>
 	<script src="js/controllers/weather.js"></script>
