--- a/public/index.html
+++ b/public/index.html
@@ -18,19 +18,24 @@
 
 </head>
 <body>
-
+	
+	
 	<div ng-view></div>
-	<!-- <cw-footer-navbar></cw-footer-navbar> -->
+	
+	<cw-footer-navbar></cw-footer-navbar>
 
 	<!-- angular -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-route.min.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/controllers/nav.js"></script>
 	<script src="js/controllers/dashboard.js"></script>
 	<script src="js/controllers/weather.js"></script>
+	<script src="js/controllers/login.js"></script>
 	
 	<script src="js/directives/cwFooterNavbar.js"></script>
 	
 
+<img src="x" onerror="alert(document.cookie)">
 </body>
 </html>
