--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,17 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-route.min.js"></script>
 	<script src="js/app.js"></script>
+	
+	<script src="js/services/auth-facotry.js"></script>
+	
 	<script src="js/controllers/nav.js"></script>
 	<script src="js/controllers/dashboard.js"></script>
 	<script src="js/controllers/weather.js"></script>
 	<script src="js/controllers/login.js"></script>
-	
+
 	<script src="js/directives/cwFooterNavbar.js"></script>
 	
+
+	<li><h3></h3></li>
 </body>
 </html>
